# AI_Sanke

./: .gitignore  LICENSE  README.md  algos.py  bc_train.py  bench_obs.py  collect_expert.py  eval.py  profiling.py  pyproject.toml  requirements.txt  snake_cnn.py  snake_env.py  snake_game.py  tensorboard.sh  test_env.py  train.py  training_utils.py
ai_snake/: __init__.py  algos.py  cli.py  profiling.py  runtime.py  snake_env.py  snake_game.py  training_utils.py
ai_snake/commands/: bench.py  eval.py  imitate.py  play.py  train.py
ai_snake/policies/: base.py  grid_utils.py  hamiltonian.py  hybrid.py  rl.py  search.py
policies/: __init__.py  base.py  grid_utils.py  hamiltonian.py  hybrid.py  rl.py  search.py
scripts/: tensorboard.sh
tests/: test_env.py  test_grid_utils.py  test_hamiltonian.py  test_policies.py
