[project]
name = "ai-snake"
version = "0.1.0"
description = "Snake AI research: rule/search/hybrid/RL/imitation learning for full-map coverage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "stable-baselines3",
    "sb3-contrib",
    "gymnasium",
    "pygame",
    "tensorboard",
    "pillow",
    "setuptools>=70,<81",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
snake-ai = "ai_snake.cli:main"

[build-system]
requires = ["setuptools>=70,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_snake*"]

[tool.uv]
package = true
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
